Rename access key -> public key for consistency, improve 'tiger auth status' table output
